--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
     "express": "^4.15.2",
+    "granim": "^1.0.6",
     "mini.css": "^2.1.2",
     "react": "^15.5.4",
+    "react-d3-cloud": "^0.4.1",
     "react-dom": "^15.5.4",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.4"
